# iRM_Embedded_2020

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dummy.txt  run-clang-format.py
.github/workflows/: continuous-integration.yml  macos.yml  ubuntu.yml  windows.yml
boards/: CMakeLists.txt
boards/DJI_Board_TypeA/: CMakeLists.txt  DJI_Board_TypeA.ioc  Makefile  stlink.cfg
boards/DJI_Board_TypeA/Core/Inc/: FreeRTOSConfig.h  can.h  i2c.h  main.h  sdio.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
boards/DJI_Board_TypeA/Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  sdio.c  spi.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
boards/DJI_Board_TypeA/FATFS/App/: fatfs.c
boards/DJI_Board_TypeA/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
boards/F103C8/: CMakeLists.txt  F103C8.ioc  Makefile  STM32F103C8Tx_FLASH.ld
boards/F103C8/Core/Inc/: FreeRTOSConfig.h
boards/F103C8/Core/Src/: freertos.c
cmake/: arm_toolchain.cmake  build_helper.cmake  clang_format.cmake
examples/: CMakeLists.txt
examples/buzzer/: main.cc
examples/dbus/: main.cc
examples/eigen/: CMakeLists.txt  f103.cc  main.cc
examples/imu/: CMakeLists.txt  calibrate.cc  magCal.m  main.cc  visualize.slx  visualize_r2018a.slx
examples/kalman/: CMakeLists.txt  f103.cc  main.cc  typeA.cc
examples/led/: CMakeLists.txt  main.cc  typeA.cc
examples/motor/: CMakeLists.txt  m3508.cc  m3508_speed.cc  m6623.cc  mg90s.cc  servo.cc
examples/sdio/: main.cc
examples/uart/: CMakeLists.txt  main.cc
examples/usb/: main.cc
shared/: CMakeLists.txt
shared/bsp/: CMakeLists.txt  bsp_buzzer.c  bsp_buzzer.cc  bsp_buzzer.h  bsp_can.cc  bsp_can.h  bsp_error_handler.c  bsp_error_handler.h  bsp_gpio.c  bsp_gpio.cc  bsp_gpio.h  bsp_imu.cc  bsp_imu.h  bsp_kalman.cc  bsp_kalman.h  bsp_memory.cc  bsp_mpu6500_reg.h  bsp_os.cc  bsp_os.h  bsp_print.c  bsp_print.cc  bsp_print.h  bsp_pwm.c  bsp_pwm.cc  bsp_pwm.h  bsp_sdio.cc  bsp_sdio.h  bsp_uart.c  bsp_uart.cc  bsp_uart.h  bsp_usb.c  bsp_usb.cc  bsp_usb.h
shared/libraries/: controller.cc  controller.h  crc.cc  crc.h  dbus.cc  dbus.h  motor.cc  motor.h  protocol.h  utils.cc  utils.h
vehicles/: CMakeLists.txt
vehicles/Infantry/: CMakeLists.txt  rm_rtos.cc
vehicles/Walle/: CMakeLists.txt  test_eye.cc  test_servo.cc  walle.cc  walle_utils.cc  walle_utils.h
